<resources>
    <string name="app_name">Livra</string>
    <string name="ARButtonContentDescription">AR logo</string>
    <string name="CaptureButtonContentDescription">Capture logo</string>
    <string name="CloseButtonContentDescription">Close</string>
    <string name="SpeakButtonContentDescription">Close</string>
    <string name="DictionaryButtonContentDescription">Dictionary</string>
    <string name="StopButtonContentDescription">Stop</string>
    <string name="BackButtonContentDescription">Back</string>
    <string name="CopyButtonContentDescription">Copy</string>
    <string name="CommentButtonContentDescription">Comment</string>
    <string name="SaveButtonContentDescription">Save</string>
    <string name="pitch">Pitch</string>
    <string name="speed">Speed</string>
    <string name="speech">Spe</string>
    <string name="dictionary">Di</string>
    <string name="close">Clo</string>
    <string name="speak">Spk</string>
    <string name="stop">Stp</string>
    <string name="back">Bk</string>
    <string name="copy">Cop</string>
    <string name="comment">Com</string>
    <string name="save">Sav</string>
    <string name="PauseButtonContentDescription">Pause</string>
    <string name="StorageButtonContentDescription">Storage</string>
    <string name="title_activity_retrieve">RetrieveActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_retrive">RetriveActivity</string>
    <string name="show_saved_comments">Show saved comments</string>
    <string name="show_saved_words">Show saved words</string>
    <string name="SearchButtonContentDescription">Search</string>
    <string name="BarcodeContentDescription">barcode</string>
    <string name="remove">Remove</string>
    <string name="book_cover">Book Cover</string>
    <string name="content_image">Content image</string>
    <string name="LibraryButtonContentDescription">Library</string>
    <string name="restart">Restart</string>
    <string name="start_game">START GAME</string>
    <string name="selected_letter">Selected Letter :</string>
    <string name="change_letter">CHANGE LETTER</string>
    <string name="SettingsButtonContentDescription">Settings</string>
    <string name="MinusButtonContentDescription">Minus</string>
    <string name="PlusButtonContentDescription">Plus</string>
    <string name="audio_settings">Audio Settings</string>
    <string name="Tutorialok">OK</string>
    <string name="TutorialContent">Livra is an interactive book reader companion system developed to increase the interest of reading and learning with usage of Augmented Reality.</string>

</resources>
