<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="350dp"
    android:layout_height="475dp"
    android:layout_gravity="center"
    android:background="?attr/panelBackground"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="end"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/SpeakBackButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/rounded_button_four"
            android:scaleType="fitXY"
            android:contentDescription="@string/BackButtonContentDescription"
            app:srcCompat="@drawable/ic_back" />

        <ImageButton
            android:id="@+id/SpeakCloseButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/rounded_button_five"
            android:scaleType="fitXY"
            android:contentDescription="@string/CloseButtonContentDescription"
            app:srcCompat="@drawable/ic_close" />
    </LinearLayout>

    <TextView
        android:id="@+id/SpeakDisplayTextView"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:padding="10dp"
        android:layout_margin="20dp"
        android:textColor="?attr/editTextColor"
        android:scrollY="40dp"
        android:textIsSelectable="true" />

    <TextView
        android:id="@+id/PitchLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textColor="?attr/colorAccent"
        android:layout_marginTop="10dp"
        android:text="@string/pitch" />

    <SeekBar
        android:id="@+id/PitchSeekBar"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:progress="50"
        android:progressTint="?attr/colorAccent"
        android:thumbTint="?attr/colorAccent" />

    <TextView
        android:id="@+id/SpeedLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:textColor="?attr/colorAccent"
        android:text="@string/speed" />

    <SeekBar
        android:id="@+id/SpeedSeekBar"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:progress="50"
        android:progressTint="?attr/colorAccent"
        android:thumbTint="?attr/colorAccent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp">

        <ImageButton
            android:id="@+id/SpeakButton"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="20dp"
            android:background="@drawable/rounded_button_three"
            android:contentDescription="@string/SpeakButtonContentDescription"
            app:srcCompat="@drawable/ic_play"
            android:scaleType="fitXY"/>
        <ImageButton
            android:id="@+id/PauseButton"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="20dp"
            android:background="@drawable/rounded_button_two"
            android:contentDescription="@string/PauseButtonContentDescription"
            app:srcCompat="@drawable/ic_pause"
            android:scaleType="fitXY"/>

        <ImageButton
            android:id="@+id/StopButton"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="20dp"
            android:background="@drawable/rounded_button_one"
            android:contentDescription="@string/StopButtonContentDescription"
            app:srcCompat="@drawable/ic_stop"
            android:scaleType="fitXY"/>
    </LinearLayout>

</LinearLayout>

