<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="475dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:background="@drawable/rounded_popup"
    android:orientation="vertical"
    android:padding="10dp">

    <ImageButton
        android:id="@+id/CloseButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="end"
        android:background="@drawable/red_rounded_button"
        android:scaleType="fitXY"
        android:drawablePadding = "5dp"
        android:contentDescription="@string/CloseButtonContentDescription"
        app:srcCompat="@drawable/ic_close"/>



    <TextView
        android:id="@+id/DisplayTextView"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_margin="20dp"
        android:textColor="@color/colorLightText"
        android:scrollY="40dp"
        android:textIsSelectable="true" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:scrollX="0dp">

        <ImageButton
            android:id="@+id/SpeechButton"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_margin="15dp"
            android:background="@drawable/rounded_button_one"
            android:contentDescription="@string/SpeakButtonContentDescription"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/ic_speech" />


        <ImageButton
            android:id="@+id/DictionaryButton"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_margin="15dp"
            android:background="@drawable/rounded_button_two"
            android:contentDescription="@string/DictionaryButtonContentDescription"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/ic_dictionary" />

        <ImageButton
            android:id="@+id/CommentButton"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_margin="15dp"
            android:background="@drawable/rounded_button"
            android:contentDescription="@string/CommentButtonContentDescription"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/ic_comment" />



    </LinearLayout>

</LinearLayout>
