<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <SurfaceView
        android:id="@+id/Surface"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

    </SurfaceView>

    <ImageButton
        android:id="@+id/GameButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/rounded_button"
        android:contentDescription="@string/ARButtonContentDescription"
        app:layout_constraintBottom_toBottomOf="@+id/Surface"
        app:layout_constraintEnd_toEndOf="@+id/Surface"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="@+id/Surface"
        app:layout_constraintTop_toTopOf="@id/Surface"
        app:layout_constraintVertical_bias="0.1"
        app:srcCompat="@drawable/ic_model"
        android:scaleType="fitXY"/>

    <ImageButton
        android:id="@+id/SettingsButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/rounded_button"
        android:contentDescription="@string/SettingsButtonContentDescription"
        app:layout_constraintBottom_toBottomOf="@+id/Surface"
        app:layout_constraintEnd_toEndOf="@+id/Surface"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="@+id/Surface"
        app:layout_constraintTop_toTopOf="@id/Surface"
        app:layout_constraintVertical_bias="0.25"
        app:srcCompat="@drawable/ic_settings"
        android:scaleType="fitXY"/>

    <ImageButton
        android:id="@+id/BarcodeButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/rounded_button_disabled"
        android:contentDescription="@string/BarcodeContentDescription"
        app:layout_constraintBottom_toBottomOf="@+id/Surface"
        app:layout_constraintEnd_toEndOf="@+id/Surface"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="@+id/Surface"
        app:layout_constraintTop_toTopOf="@id/Surface"
        app:layout_constraintVertical_bias="0.4"
        app:srcCompat="@drawable/ic_barcode"
        android:scaleType="fitXY"/>

    <ImageButton
        android:id="@+id/CaptureButton"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:background="@drawable/rounded_button"
        android:contentDescription="@string/CaptureButtonContentDescription"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="@+id/Surface"
        app:layout_constraintEnd_toEndOf="@+id/Surface"
        app:layout_constraintStart_toStartOf="@+id/Surface"
        app:layout_constraintTop_toTopOf="@id/Surface"
        app:layout_constraintVertical_bias="0.95"
        app:srcCompat="@drawable/ic_capture"/>

    <ImageButton
        android:id="@+id/LibraryButton"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/rounded_button"
        android:contentDescription="@string/LibraryButtonContentDescription"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="@+id/Surface"
        app:layout_constraintEnd_toEndOf="@+id/Surface"
        app:layout_constraintStart_toStartOf="@+id/Surface"
        app:layout_constraintTop_toTopOf="@id/Surface"
        app:layout_constraintVertical_bias="0.93"
        app:layout_constraintHorizontal_bias="0.08"
        app:srcCompat="@drawable/ic_library"/>

    <ImageButton
        android:id="@+id/StorageButton"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/rounded_button"
        android:contentDescription="@string/StorageButtonContentDescription"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="@+id/Surface"
        app:layout_constraintEnd_toEndOf="@+id/Surface"
        app:layout_constraintStart_toStartOf="@+id/Surface"
        app:layout_constraintTop_toTopOf="@id/Surface"
        app:layout_constraintVertical_bias="0.93"
        app:layout_constraintHorizontal_bias="0.92"
        app:srcCompat="@drawable/ic_storage"/>

</androidx.constraintlayout.widget.ConstraintLayout>